@@ -6,11 +6,11 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Collections;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -32,19 +32,14 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
         if (header != null && header.startsWith("Bearer ")) {
             String token = header.substring(7);
-            try {
-                var claims = jwtUtil.validateAndGetClaims(token).getBody();
-                String email = claims.get("email", String.class);
-                String role = claims.get("role", String.class);
+            if (jwtUtil.validateToken(token)) {
+                String username = jwtUtil.extractUsername(token);
 
-                var auth = new UsernamePasswordAuthenticationToken(
-                        email,
-                        null,
-                        java.util.List.of(() -> "ROLE_" + role)
-                );
-                auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                UsernamePasswordAuthenticationToken auth =
+                        new UsernamePasswordAuthenticationToken(
+                                username, null, Collections.emptyList());
+
                 SecurityContextHolder.getContext().setAuthentication(auth);
-            } catch (Exception ignored) {
             }
         }
 
